ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudproject-ingress
spec:
  rules:
  - http:
      paths:
        - path: /api/account
          pathType: Prefix
          backend:
            service:
              name: userhandle-service
              port:
                number: 5001
        - path: /api/products
          pathType: Prefix
          backend:
            service:
              name: products-service
              port:
                number: 5003
        - path: /api/orders
          pathType: Prefix
          backend:
            service:
              name: orders-service
              port:
                number: 5002
